--- a/index.html
+++ b/index.html
@@ -2,22 +2,136 @@
 <html>
 
   <style> 
-        #footer { 
-            position: fixed; 
-            padding: 10px 10px 0px 10px; 
-            bottom: 0; 
-            width: 100%; 
-            /* Height of the footer*/  
-            height: 40px; 
-            background: #DDDDD"; 
-        } 
+        body{
+  background-color: yellowgreen;
+}
+.no-shadows {
+    box-shadow: none!important;
+}
+.container{
+  margin-top: 2rem;
+}
+.tabs .tab a:hover, .tabs .tab a.active {
+    color: #9acd32 !important;
+}
+
+.tabs .indicator {
+    background-color: #9acd32 !important;
+}
+.tabs .tab a {
+        color: rgba(0,0,0,0.87) !important;
+        font-weight: 500;
+}
+.tabs .tab a:focus, .tabs .tab a:focus.active {
+    background-color: rgb(154, 205, 50);
+    outline: none;
+}
+.tabs .tab a:focus, .tabs .tab a:focus.active {
+    background-color: rgba(154, 205, 50, 0.4) !important;
+}
+
     </style>
-<body  style="background-color: #fff">
-<center><h1>Grafik ve Animasyon  II</h1></center>
-<center><p>Bu web sitesi github servislerinde yer almaktadır.</p></center>
-  <center> <IMG SRC="1_Dkmqx1iM4P15wthwBWGCEQ.gif" height="127" width="566"> </center>
-<center> <div id="footer">Grafik ve animasyon  II dersi Tüm hakları saklıdır.
-                      
-                  </div>  </center>
-</body>
+  <head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <title>My wallet 🚀</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  </head>
+  <body>
+
+    <div class="container">
+
+      <div class="row">
+
+        <div class="col l6 offset-l3 z-depth-4 s12 m12 white">
+          <h4>Wallet for donate.</h4>
+          <hr>
+          <ul id="tabs-swipe-demo" class="tabs">
+            <li class="tab col s3"><a href="#btc">Bitcoin</a></li>
+            <li class="tab col s3"><a href="#eth">Etherium</a></li>
+            <li class="tab col s3"><a href="#neo">Neo</a></li>
+            <li class="tab col s3"><a href="#stx">Stellar</a></li>
+          </ul>
+
+          <div id="btc" class="col s12">
+            <div class="row">
+              <div class="col s12 m12">
+                <div class="card no-shadows">
+                  <div class="card-content">
+                    <span class="card-title">Bitcoin wallet adress</span>
+                    <p>13wmJNBwGEg6q8o8XU5rDDd2b82yJtrhSg</p>
+                  </div>
+                  <div class="card-action">
+                    <img src="https://wallet.erdem.in/btc.png" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="eth" class="col s12">
+            <div class="row">
+              <div class="col s12 m12">
+                <div class="card no-shadows">
+                  <div class="card-content">
+                    <span class="card-title">Etherium wallet adress</span>
+                    <p>0xd1CC244CdBF43610C078D4219216c5653d013fa4</p>
+                  </div>
+                  <div class="card-action">
+                    <img src="https://wallet.erdem.in/eth.png" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="neo" class="col s12">
+            <div class="row">
+              <div class="col s12 m12">
+                <div class="card no-shadows">
+                  <div class="card-content">
+                    <span class="card-title">Neo wallet adress</span>
+                    <p>AbVczU8foFA5v4q7AvCwbYM6acHXg1Kuo</p>
+                  </div>
+                  <div class="card-action">
+                    <img src="https://wallet.erdem.in/neo.png" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div id="stx" class="col s12">
+            <div class="row">
+              <div class="col s12 m12">
+                <div class="card no-shadows">
+                  <div class="card-content">
+                    <span class="card-title">Stellar wallet adress</span>
+                    <p>GDKNGBON6GB2Z7ACZ4ELTNJXRIB7OUXS6VJOQRWWNHSHBJUYSROF3SVM</p>
+                  </div>
+                  <div class="card-action">
+                    <img src="https://wallet.erdem.in/stx.png" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+  $('.tabs').tabs();
+});
+
+    </script>
+  </body>
 </html>
